--- a/po/uk.po
+++ b/po/uk.po
@@ -15,9 +15,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-07-25 20:34-0400\n"
-"PO-Revision-Date: 2012-06-29 13:31+0000\n"
-"Last-Translator: Rax Garfield <admin@dvizho.ks.ua>\n"
+"POT-Creation-Date: 2012-07-25 20:41-0400\n"
+"PO-Revision-Date: 2012-07-26 00:36+0000\n"
+"Last-Translator: John Lindgren <john.lindgren@aol.com>\n"
 "Language-Team: Ukrainian\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
@@ -165,9 +165,8 @@ msgid "Playlist (optional)"
 msgstr "Список відтворення (необов’язково)"
 
 #: src/alarm/interface.c:1075
-#, fuzzy
 msgid "Select a playlist"
-msgstr "Виділити наступний список відтворення"
+msgstr ""
 
 #: src/alarm/interface.c:1085 src/alarm/interface.c:1250
 msgid "Reminder"
@@ -186,7 +185,6 @@ msgid "What do these options mean?"
 msgstr "Як це все налаштувати?"
 
 #: src/alarm/interface.c:1155
-#, fuzzy
 msgid ""
 "\n"
 "Time\n"
@@ -238,58 +236,6 @@ msgid ""
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
 msgstr ""
-"\n"
-"Час\n"
-"  Починати о: \n"
-"    Час, коли починатиметься відтворення.\n"
-"\n"
-"  Закінчити через: \n"
-"    Закінчити відтворення через заданий тут проміжок часу після початку.\n"
-"       (якщо діалогове вікно пробудження не закрито)\n"
-"\n"
-"\n"
-"Дні\n"
-"  День:\n"
-"    День тижня, в який працюватиме будильник.\n"
-"\n"
-"  Час:\n"
-"    Час, коли будильник спрацьовуватиме в обраний день.\n"
-"    Якщо вибрано \"Як типово\", будильник спрацює в типовий\n"
-"    час (вкладка \"Час\").\n"
-"\n"
-"\n"
-"Гучність\n"
-"  Наростання: \n"
-"    Під час відтворення за розкладом гучність\n"
-"    нарощуватиметься протягом вказаного.\n"
-"    тут періоду часу.\n"
-"\n"
-"  На початку: \n"
-"    Почати нарощення з цієї гучності.\n"
-"\n"
-"  По закінченню: \n"
-"    Нарощувати до цієї гучності. Якщо часом\n"
-"    наростання є 0, то все відтворення йтиме\n"
-"    з цією гучністю.\n"
-"\n"
-"\n"
-"Опції:\n"
-"  Виконувати команду:\n"
-"    Запускати цю команду під час спрацьовування.\n"
-"\n"
-"  Список відтворення (необов’язково): \n"
-"    Відтворювати цей список відтворення (лише \n"
-"    з суфіксом .m3u). Якщо не вказано, то\n"
-"    відтворюватимуться останні відкриті\n"
-"    доріжки.\n"
-"    Можна ввести сюди URL mp3- чи ogg-потоку.\n"
-"    Поки що завантаження списків відтворення\n"
-"    за URL не підтримується.\n"
-"\n"
-"  Повідомлення:\n"
-"    Показувати повідомлення при спрацьовуванні.\n"
-"    Для використання введіть повідомлення в поле\n"
-"    й увімкніть \"Використовувати:\".\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
@@ -1652,7 +1598,7 @@ msgstr "Показувати рядок _стану"
 
 #: src/gtkui/menus.c:232
 msgid "Show Close _Buttons"
-msgstr ""
+msgstr "Показувати _кнопки закриття"
 
 #: src/gtkui/menus.c:233
 msgid "Show Column _Headers"
@@ -1971,37 +1917,30 @@ msgid "LIRC Plugin"
 msgstr "LIRC Плагін"
 
 #: src/lyricwiki/lyricwiki.c:119
-#, fuzzy
 msgid "No lyrics available"
-msgstr "* у цьому MIDI-файлі немає слів пісні *"
+msgstr "Тексту пісні не знайдено"
 
 #: src/lyricwiki/lyricwiki.c:189 src/lyricwiki/lyricwiki.c:215
 #, c-format
 msgid "Unable to fetch %s"
-msgstr ""
+msgstr "Не вдалося отримати %s"
 
 #: src/lyricwiki/lyricwiki.c:199 src/lyricwiki/lyricwiki.c:225
 #, c-format
 msgid "Unable to parse %s"
-msgstr ""
+msgstr "Не вдалося проаналізувати %s"
 
 #: src/lyricwiki/lyricwiki.c:234
-#, fuzzy
 msgid "Looking for lyrics ..."
-msgstr ""
-"\n"
-"Шукаю слова..."
+msgstr "Шукаю текст пісні..."
 
 #: src/lyricwiki/lyricwiki.c:245
 msgid "Missing song metadata"
-msgstr ""
+msgstr "Відсутні метадані пісні"
 
 #: src/lyricwiki/lyricwiki.c:258
-#, fuzzy
 msgid "Connecting to lyrics.wikia.com ..."
-msgstr ""
-"\n"
-"З’єднуюся з lyrics.wikia.com..."
+msgstr "З’єднуюся з lyrics.wikia.com..."
 
 #: src/lyricwiki/lyricwiki.c:387
 msgid "LyricWiki Plugin"
@@ -2194,9 +2133,8 @@ msgid "<b>Services</b>"
 msgstr "<b>Служби</b>"
 
 #: src/scrobbler/configure.c:143
-#, fuzzy
 msgid "<b>Last.fm</b>"
-msgstr "<b>Last.FM</b>"
+msgstr "<b>Last.fm</b>"
 
 #: src/scrobbler/configure.c:147
 msgid "Username:"
@@ -2702,9 +2640,8 @@ msgid "Playlist"
 msgstr "Список відтворення"
 
 #: src/skins/ui_manager.c:210 src/skins/ui_manager.c:211
-#, fuzzy
 msgid "Play Playlist"
-msgstr "Відтворити _цей список"
+msgstr "Відтворити список"
 
 #: src/skins/ui_manager.c:213 src/skins/ui_manager.c:214
 msgid "New Playlist"
@@ -3403,13 +3340,3 @@ msgstr "2SF Декодер"
 #: src/xspf/xspf.c:442
 msgid "XML Shareable Playlists (XSPF)"
 msgstr "XML Роздільні Плейлисти (XSPF)"
-
-#~ msgid "Browse..."
-#~ msgstr "Огляд..."
-
-#~ msgid ""
-#~ "\n"
-#~ "No lyrics were found."
-#~ msgstr ""
-#~ "\n"
-#~ "Не знайдено слів пісні."
